changed the stucture of the folders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,17 @@ cmake_minimum_required(VERSION 3.10)
 # Project name
 project(gbemu)
 
-# Set C++ Standard
+# Set the C++ Standard
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Add all the source files (search for all .cpp files in the current directory)
-file(GLOB SOURCES *.cpp)
+# Add include directories (where the .h files are located)
+include_directories(${CMAKE_SOURCE_DIR}/include)
 
-# Create executable from the source files
-add_executable(program ${SOURCES})
+# Find all .cpp files in src directory
+file(GLOB SRC_FILES ${CMAKE_SOURCE_DIR}/src/*.cpp)
+
+# Add the executable
+add_executable(gbemu main.cpp ${SRC_FILES})
+
+# If you want to separate testing or additional directories in the future, you can add those here.
